2010-09-30  Per Bothner  <per@bothner.com>

	* Compilation.java (langOptions): New field.
	(generateApplet, generateServlet): Remove fields. Instead use
	bits in langOptions.
	(generatingApplet, generatingServlet, sharedModuleDefs): New methods.
	* Language.java (parse): Set langOptions from options parameter.

2010-09-28  Per Bothner  <per@bothner.com>

	* TypeValue.java (emitTestIf): Fix error in javadoc.

	* LambdaExp.java (enterFunction):  If parameter is indirect-binding,
	change Variable's type to Location.

	* FindCapturedVars.java (checkInlineable): Remove unused local.

2010-09-20  Per Bothner  <per@bothner.com>

	* InlineCalls.java (checkType): New method, extracted from visit.
	Do SAM conversion: If the required type has a Single Abstract Method,
	you can use a lambda expression.

	* Language.java (parse): Set mustCompile here as appropriate.
	* ModuleExp.java (evalModule1): Don't need to set it here.

	* InlineCalls.java (visitSetExpValue): Use the raw type of decl,
	rather than using getType, which may force it to Object.

	* ClassExp.java (AbstractMethodFilter): Helper class moved to
	gnu.bytecode.ClassType.
	(compileMembers): Use new gnu.bytecode.ClassType#getAbstractMethods.

	* ClassExp.java (print) Some pretty-printing tweaks.

	* ClassExp.java (addMethod): New convenience method.

2010-09-17  Per Bothner  <per@bothner.com>

	* QuoteExp.java (getInstance): New factory method taking SourceLocator.

	* InlineCalls.java (visit): Pass SourceLocator eror error.

2010-09-16  Per Bothner  <per@bothner.com>

	* ApplyExp.java (visitArgs): Remove version that takes argsInlined.
	* InlineCalls.java (maybeInline): The validateApply methods no
	longer take a boolean argsInlined parameter.

	* Expression.java (VALIDATED): New flag.
	(NEXT_AVAIL_FLAG): Update accordingly.
	(validateApply): Remove no-longer-used argsInlined parameter.
	* ApplyExp.java (visitArgs): New method without argsInlined parameter.