@@ -436,6 +436,7 @@ public class Compilation implements SourceLocator
             || ! (nameDecl.context instanceof ModuleExp))
           return true;
         if (immediate
+            && ! nameDecl.ignorable()
             && ! lproc.getFlag(LambdaExp.OVERLOADABLE_FIELD)
             && (curLambda == null || lproc.topLevel() != curLambda.topLevel()))
           return false;
